Switch to common openapi module

--- a/open-api/src/main/resources/yaml/requests/requestBodies.yaml
+++ b/open-api/src/main/resources/yaml/requests/requestBodies.yaml
@@ -4,9 +4,11 @@ CreateNewsBody:
     application/json:
       schema:
         $ref: '../models/news.yaml#/CreateNews'
+  required: true
 UpdateNewsBody:
   description: A payload for updating an existing News
   content:
     application/json:
       schema:
         $ref: '../models/news.yaml#/UpdateNews'
+  required: true
