Change setup for container usablility

--- a/reader/src/main/resources/application.properties
+++ b/reader/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.data.mongodb.authentication-database=admin
 spring.data.mongodb.username=root
 spring.data.mongodb.password=example
 spring.data.mongodb.database=reader
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=host.docker.internal
 spring.data.mongodb.port=27017
 
-server.port=8080
+server.port=${PORT:8085}
