--- a/launch/docker-compose.yml
+++ b/launch/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.1'
+version: '3.8'
 
 services:
 
@@ -10,3 +10,22 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
+    networks:
+        - cqrs
+
+  reader:
+    image: homecqrs/reader
+    ports:
+      - 8085:8085
+    environment:
+      MONGO_DB_URI: http://host.docker.internal:27017
+    depends_on:
+     - mongo
+    networks:
+      - cqrs
+
+networks:
+  cqrs:
+    external: false
+    name: cqrs
+    driver: bridge
