--- a/reader/pom.xml
+++ b/reader/pom.xml
@@ -165,7 +165,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>com.softserveinc.ita.homeproject.homedatamigration.migrations.LiquibaseRunner</mainClass>
+                            <mainClass>com.softserveinc.ita.homeproject.reader.ReaderApplication</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
