--- a/writer/pom.xml
+++ b/writer/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>validation-api</artifactId>
         </dependency>
         <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
             <groupId>javax.ws.rs</groupId>
             <artifactId>javax.ws.rs-api</artifactId>
         </dependency>
@@ -142,10 +147,9 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>jib-maven-plugin</artifactId>
-                <version>3.2.1</version>
                 <configuration>
                     <to>
-                        <image>homecqrs/reader</image>
+                        <image>homecqrs/writer</image>
                         <tags>
                             <tag>${revision}</tag>
                         </tags>
