Eureka Discovery Service base skeleton created

--- a/writer/src/main/resources/application.properties
+++ b/writer/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.password=${DATASOURCE_PASSWORD:password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 server.port=${PORT:8086}
+
+spring.application.name = writer-service
+eureka.client.serviceUrl.defaultZone  = http://localhost:8083/eureka
