--- a/gateway-spring-cloud/src/main/resources/application.properties
+++ b/gateway-spring-cloud/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 server.port=${PORT:8088}
 spring.application.name=gateway-spring-cloud
+
+eureka.client.serviceUrl.defaultZone  = http://localhost:8083/eureka
