--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 
         <!--Spring dependencies versioning-->
         <spring.boot.version>2.6.7</spring.boot.version>
-        <spring-cloud-starter-gateway.version>3.1.2</spring-cloud-starter-gateway.version>
+        <spring-cloud-starter.version>3.1.2</spring-cloud-starter.version>
         <spring-kafka.version>2.8.5</spring-kafka.version>
         <spring-data-jpa.version>2.5.11</spring-data-jpa.version>
 
@@ -137,7 +137,17 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-gateway</artifactId>
-                <version>${spring-cloud-starter-gateway.version}</version>
+                <version>${spring-cloud-starter.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+                <version>${spring-cloud-starter.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+                <version>${spring-cloud-starter.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.kafka</groupId>
