--- a/reader/src/main/resources/application.properties
+++ b/reader/src/main/resources/application.properties
@@ -7,3 +7,7 @@ spring.data.mongodb.host=host.docker.internal
 spring.data.mongodb.port=27017
 
 server.port=${PORT:8085}
+
+spring.application.name = reader-service
+eureka.client.serviceUrl.defaultZone  = http://localhost:8083/eureka
+
