--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>reader</module>
         <module>writer</module>
         <module>writer-data-migration</module>
+        <module>eureka-discovery-service</module>
     </modules>
 
     <properties>
@@ -43,10 +44,10 @@
         <!--Other dependencies properties-->
         <assertj-core.version>3.16.1</assertj-core.version>
 
-        <jackson-annotations.version>2.12.3</jackson-annotations.version>
-        <jackson-core.version>2.12.3</jackson-core.version>
+        <jackson-annotations.version>2.12.2</jackson-annotations.version>
+        <jackson-core.version>2.12.2</jackson-core.version>
         <jackson-databind-nullable.version>0.2.2</jackson-databind-nullable.version>
-        <jackson-databind.version>2.12.3</jackson-databind.version>
+        <jackson-databind.version>2.12.2</jackson-databind.version>
         <javax.persistence-api.version>2.2</javax.persistence-api.version>
         <javax.ws.rs-api.version>2.1.1</javax.ws.rs-api.version>
         <jersey-client.version>3.0.4</jersey-client.version>
@@ -128,6 +129,12 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
                 <version>${spring.boot.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-databind</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -143,11 +150,23 @@
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
                 <version>${spring-cloud-starter.version}</version>
+<!--                <exclusions>-->
+<!--                    <exclusion>-->
+<!--                        <groupId>com.fasterxml.jackson.core</groupId>-->
+<!--                        <artifactId>jackson-databind</artifactId>-->
+<!--                    </exclusion>-->
+<!--                </exclusions>-->
             </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
                 <version>${spring-cloud-starter.version}</version>
+<!--                <exclusions>-->
+<!--                    <exclusion>-->
+<!--                        <groupId>com.fasterxml.jackson.core</groupId>-->
+<!--                        <artifactId>jackson-databind</artifactId>-->
+<!--                    </exclusion>-->
+<!--                </exclusions>-->
             </dependency>
             <dependency>
                 <groupId>org.springframework.kafka</groupId>
@@ -171,6 +190,11 @@
                 <groupId>javax.validation</groupId>
                 <artifactId>validation-api</artifactId>
                 <version>${validation-api.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-annotations</artifactId>
+                <version>${jackson-annotations.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.openapitools</groupId>
@@ -274,6 +298,11 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-core</artifactId>
                 <version>${springfox-core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson-databind.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.openapitools</groupId>
