--- a/eureka-discovery-service/src/main/resources/application.yaml
+++ b/eureka-discovery-service/src/main/resources/application.yaml
@@ -9,4 +9,5 @@ eureka:
     registerWithEureka: false
     fetchRegistry: false
     service-url:
-      defaultZone: http://localhost:8083/eureka
+  # Note that when you run app locally you should use localhost instead of host.docker.internal
+      defaultZone: http://host.docker.internal:8083/eureka
