--- a/reader/src/main/resources/application.properties
+++ b/reader/src/main/resources/application.properties
@@ -9,5 +9,6 @@ spring.data.mongodb.port=27017
 server.port=${PORT:8085}
 
 spring.application.name = reader-service
-eureka.client.serviceUrl.defaultZone  = http://localhost:8083/eureka
 
+# Note that when you run app locally you should use localhost instead of host.docker.internal
+eureka.client.serviceUrl.defaultZone  = http://host.docker.internal:8083/eureka
