--- a/writer/src/main/resources/application.properties
+++ b/writer/src/main/resources/application.properties
@@ -6,4 +6,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 server.port=${PORT:8086}
 
 spring.application.name = writer-service
-eureka.client.serviceUrl.defaultZone  = http://localhost:8083/eureka
+
+# Note that when you run app locally you should use localhost instead of host.docker.internal
+eureka.client.serviceUrl.defaultZone  = http://host.docker.internal:8083/eureka
