Added kafka implementation for reader and writer

--- a/reader/src/main/resources/application.properties
+++ b/reader/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.data.mongodb.host=host.docker.internal
 spring.data.mongodb.port=27017
 
 server.port=${PORT:8085}
+
+
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
