--- a/writer/src/main/resources/application.properties
+++ b/writer/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.password=${DATASOURCE_PASSWORD:password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 server.port=${PORT:8086}
+
+spring.kafka.producer.bootstrap-servers=host.docker.internal:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
